# fastAPI_test

./: ARCHITECTURE_DECISIONS.md  README.md  REFACTORING.md  main.py  plan.md  pyproject.toml  refactoring_plan.md
.cursor/skills/kent-beck/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  main.py
app/api/: __init__.py  article.py  auth.py  comment.py  profile.py  tag.py
app/api/routers/: article_router.py
app/core/: __init__.py  database.py  db.py  dependencies.py  error_handlers.py  exceptions.py  security.py
app/dtos/: request.py  response.py
app/models/: __init__.py  article_model.py  base.py  comment_model.py  favorite_model.py  follow_model.py  tag_model.py  user_model.py
app/repositories/: __init__.py  articleRepo.py  article_repo.py  article_repository.py  comment_repository.py  favorite_repository.py  follow_repository.py  interfaces.py  tag_repository.py  user_repository.py
app/schemas/: __init__.py  article_schema.py  request.py  response.py  user_schema.py
app/services/: __init__.py  article_service.py  comment_service.py  profile_service.py  tag_service.py  user_service.py
tests/: conftest.py  test_article_api.py  test_article_repository.py  test_articles_create.py  test_articles_delete.py  test_articles_favorite.py  test_articles_filter.py  test_articles_read.py  test_articles_update.py  test_auth_current_user.py  test_auth_login.py  test_auth_register.py  test_auth_update_user.py  test_comments.py  test_profile_get.py  test_profiles.py  test_tags.py
tests/fixtures/: article_fixtures.py  auth_fixtures.py  db_client_fixtures.py  user_fixtures.py
